Bug 111837 - Navigator: Lag in navigator selection update when clicking on next slide
Summary: Navigator: Lag in navigator selection update when clicking on next slide
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Windows (All)
: medium trivial
Assignee: Kshitij
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2017-08-16 01:13 UTC by Tamás Zolnai
Modified: 2018-01-28 19:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-16 01:13:09 UTC
Description:
On navigator we can switch between slides. There are some arrow icons on the top of the navigator window (Next Slide, First Slide, etc). The weird thing is that the slide change is done faster (the newly selected slide is displayed in the main window), than the selection change on the navigator window.

Steps to Reproduce:
1. Open Impress
2. Create some slides
3. Open navigator (sidebar -> navigator)
4. Click on the arrow icons (e.g. Next Slide)

Actual Results:  
Navigator window is updated later than the main window.

Expected Results:
Navigator window update should be faster, since the status change is available directly inside that window (in theory).


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Telesto 2017-08-16 09:19:18 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: f1a896c71c495bdef5861eb664581507b6b9b5bb
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-13_07:38:19
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Tamás Zolnai 2017-08-24 17:43:00 UTC
Let's turn this into an easy hack. The code is here:
sd/uiconfig/simpress/ui/navigatorpanel.ui -> defines the view of the panel
sd/source/ui/dlg/navigatr.cxx -> defines the panel behavior
Comment 3 Shubham Gupta 2017-12-23 12:09:04 UTC
Hello, I am a newbie and wish to work on this bug, I checked out the code but wasnt able to get much.
Comment 4 Tamás Zolnai 2017-12-23 19:46:59 UTC
(In reply to Shubham Gupta from comment #3)
> Hello, I am a newbie and wish to work on this bug, I checked out the code
> but wasnt able to get much.

Hi,

Someone is already working on this bug (see assignee field). So please find and other easy hack work on and do not forget to assign that to yourself.
Comment 5 Xisco Faulí 2018-01-23 03:20:54 UTC Comment hidden (obsolete)
Comment 6 Omer Zak 2018-01-23 04:34:43 UTC
Sorry, I found that I do not have free time for this. I am removing myself from assignment to the bug.
Comment 7 Kshitij 2018-01-26 17:57:53 UTC
@tamas Can I work parallely on this bug as its interesting and labeled easy.
Comment 8 Tamás Zolnai 2018-01-26 17:58:42 UTC
(In reply to Kshitij from comment #7)
> @tamas Can I work parallely on this bug as its interesting and labeled easy.

You can take it over.
Comment 9 Commit Notification 2018-01-28 17:23:25 UTC
Kshitij Pathania committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=056c3bf2dcae23cd711d4cbffc3058cf31bfe75e

tdf#111837 removed lag in navigator selection update

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.