tdf#111837 removed lag in navigator selection update

Change-Id: I0d15f8352ab1d8846df3b03334bda20550d117d2
Reviewed-on: https://gerrit.libreoffice.org/48717
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>